<resources>
    <string name="app_name">Trinity</string>
    <string name="You_need_open_setting_to_grant_permission">You need open setting to grant permission!</string>

    --------------Splash Activity-------------
    <string name="titleSplash">Weara</string>

    --------------Home Activity----------------
    <string name="titleHome">スタート画面</string>
    <string name="txtNewAccount">はじめての方</string>
    <string name="txtLogin">サインイン</string>
    --------------Login Activity-------------
    <string name="txtBack">もどる</string>
    <string name="txtSignup">新規登録</string>
    <string name="txtSignin">サインイン</string>
    --------------Signup Fragment------------
    <string name="txtSignupEmail">メールアドレスを登録</string>
    <string name="btnSignup">新規登録</string>
    <string name="txtLinkEmail">メールリンクとは ？</string>
    <string name="txtLoginWithYourUser">アカウントでサインイン</string>
    <string name="txtSigninWithApple">Sign in with Apple</string>
    <string name="txtSigninWithGoogle">Sign in with Google</string>
    ---------------Check Register Fragment-------------
    <string name="txtNotifiEmail">宛にメールを送信しました。</string>
    <string name="btnOpenEmail">メールアプリを開く</string>
    <string name="txtNotifi2">もう一度戻ってやり直してください。</string>
    <string name="txtNotifi1">3分経って届かない場合には</string>
    <string name="txtNotifi3">※noreply@weara.jpからのメールを</string>
    <string name="txtNotifi4">許可してください。</string>
    --------------Confirm Email Fragment-----------------
    <string name="txt1">メールアドレスが</string>
    <string name="txt2">確認できました。</string>
    <string name="btnSetting">初期設定へ進む</string>
    --------------Create Account Fragment ----------------
    <string name="text1">下記のグループの招待を受けています。</string>
    <string name="text2">「アカウント作成」をタップして、下記のグルー</string>
    <string name="text3">プに参加するアカウントを作成できます。</string>
    <string name="text4">参加できるグループは最後に招待を受け取ったグ</string>
    <string name="text5">ループです。</string>
    <string name="txtCompany">スーパー・トリニティ株式会社</string>
    <string name="btnCreateAccount">アカウント作成</string>
    <string name="text6">個人アカウントで登録したい場合は [もどる] を押して新規登録を進めてください。招待グループが違う場合は、担当者にご確認ください。</string>
    <string name="txtTitleAcount">グループ参加</string>
    --------------Link Email Fragment -------------------
    <string name="btnLinkEmail">メールリンク登録</string>
    <string name="txtEmailTest">test@weara.jp</string>
    ---------------Profile Fragment--------------------
    <string name="titleprofile">初期設定</string>
    <string name="txtNickName">ニックネーム</string>
    <string name="hint1">10文字以内で入力</string>
    <string name="txtBirthday">誕生日</string>
    <string name="hint2">1975年1月1日</string>
    <string name="txtSex">性別</string>
    <string name="hint3">性別を選択</string>
    <string name="txtWeight">身長 / 体重</string>
    <string name="txtHand">装着</string>
    <string name="hint4">装着する腕を選択</string>
    <string name="btnNext">次へ</string>
    ---------------Description Email Fragment----------------
    <string name="linkEmail">メールリンクとは</string>
    <string name="descrip1">wearaでは、「メールリンク」と呼ばれるサイン
イン方法を採用しています。</string>
    <string name="descrip2">ユーザー登録時にはメールアドレスとパスワードを登録していただきますが、その後、wearaにサインインする際には、24時間有効な1回限りのサインイン用リンクを都度メールで受け取ることができます。</string>
    <string name="descrip3">この仕組みを使えば、パスワードの入力が不要になり、手軽にサインインできます。</string>
</resources>