<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="createAccountViewModel"
            type="com.trinity.basemvvm.ui.main.fragment.create_account.CreateAccountViewModel" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="109dp"
            android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginTop="40dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text4"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text5"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginTop="5dp"/>
            <RelativeLayout
                android:layout_width="330dp"
                android:layout_marginTop="40dp"
                android:onClick="@{()->createAccountViewModel.onCLickProfile()}"
                android:background="@drawable/custom_layout_create_account"
                android:layout_height="60dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCompany"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20sp"/>
            </RelativeLayout>
            <Button
                android:layout_width="230dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_height="55dp"
                android:text="@string/btnCreateAccount"
                android:textColor="@color/black"
                android:onClick="@{()->createAccountViewModel.onClickCreateAccount()}"
                android:textSize="16sp"
                android:background="@drawable/custom_btn_login_gradient"/>
            <TextView
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/text6"
                android:lineSpacingMultiplier="1.25"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginTop="40dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>