<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="checkRegisterViewModel"
            type="com.trinity.basemvvm.ui.main.fragment.check_register.CheckRegisterViewModel" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="taro@sample.jp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="109dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txtNotifiEmail"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtNotifi1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtNotifi2"
            android:textSize="15sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/txtNotifi3"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txtNotifi4"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:text="@string/btnOpenEmail"
            android:id="@+id/btnOpenEmail"
            android:onClick="@{()->checkRegisterViewModel.onClickOpenEmail()}"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_btn_home"
            android:layout_marginTop="40dp"
            android:textSize="16sp"/>
    </LinearLayout>
</layout>