<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkEmail"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="109dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/descrip1"
                android:textColor="@color/white"
                android:lineSpacingMultiplier="1.2"
                android:layout_marginTop="21dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/descrip2"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:lineSpacingMultiplier="1.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/descrip3"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </LinearLayout>
</layout>