<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="homeViewModel"
            type="com.trinity.basemvvm.ui.main.activity.home.HomeViewModel" />
        <import type="android.view.View"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleHome"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnNewAccount"
            android:layout_centerInParent="true"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:letterSpacing="0.3"
            android:text="@string/titleSplash"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="72dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/custom_btn_home"
            android:padding="15dp"
            android:text="@string/txtNewAccount"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnNewAccount"
            android:layout_centerInParent="true"
            android:text="@string/txtLogin"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_btn_home"
            android:layout_marginLeft="50dp"
            android:padding="15dp"
            android:id="@+id/btnLogin"
            android:textSize="20sp"
            android:layout_marginRight="50dp"/>
    </RelativeLayout>
</layout>