<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="profileViewModel"
            type="com.trinity.basemvvm.ui.main.fragment.profile.ProfileViewModel" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="46.5dp"
            android:layout_marginRight="46.5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtNickName"
                android:textSize="30dp"
                android:id="@+id/txtTitle"
                android:layout_marginTop="31dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="@string/hint1"
                android:id="@+id/edtNickName"
                android:textColorHint="@color/whites"
                android:layout_marginTop="151dp"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="@string/hint2"
                android:id="@+id/edtBirthday"
                android:visibility="gone"
                android:textColorHint="@color/whites"
                android:layout_marginTop="151dp"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="@string/hint3"
                android:visibility="gone"
                android:id="@+id/edtSex"
                android:textColorHint="@color/whites"
                android:layout_marginTop="151dp"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="@string/hint4"
                android:id="@+id/edtHand"
                android:visibility="gone"
                android:textColorHint="@color/whites"
                android:layout_marginTop="151dp"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="cm"
                android:id="@+id/edtTall"
                android:visibility="gone"
                android:textColorHint="@color/whites"
                android:layout_marginTop="151dp"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:id="@+id/view1"
                android:layout_marginTop="18dp"
                android:background="@color/white"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:background="@null"
                android:hint="kg"
                android:layout_marginTop="62dp"
                android:visibility="gone"
                android:id="@+id/edtWeight"
                android:textColorHint="@color/whites"
                android:gravity="center_horizontal"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:id="@+id/view2"
                android:visibility="gone"
                android:layout_marginTop="18dp"
                android:background="@color/white"/>
            <Button
                android:layout_width="230dp"
                android:layout_height="55dp"
                android:text="@string/btnNext"
                android:onClick="@{()->profileViewModel.onClickNext()}"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_btn_home"
                android:layout_marginTop="339dp"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</layout>