<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="signupViewModel"
            type="com.trinity.basemvvm.ui.main.fragment.signup.SignupViewModel" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="123dp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/custom_layout_signup">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtSignupEmail"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:padding="15dp"/>
        </RelativeLayout>
        <Button
            android:layout_width="270dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSignup"
            android:id="@+id/btnSignup"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/custom_btn_login_gradient"/>
        <LinearLayout
            android:layout_width="230dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/bgSignupEmail"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_help_24"/>
                <LinearLayout
                    android:layout_width="170dp"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        android:text="@string/txtLinkEmail" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLoginWithYourUser"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="38.5dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_btn_home"
            android:layout_marginRight="40dp">
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/imgGoolge"
                android:layout_centerVertical="true"
                android:src="@drawable/google"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSigninWithGoogle"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/imgGoolge"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    </LinearLayout>
</layout>