<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="linkEmailViewModel"
            type="com.trinity.basemvvm.ui.main.fragment.link_email.LinkEmailViewModel" />
        <import type="android.view.View"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_marginTop="109dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_layout_signup">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtEmailTest"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:padding="15dp"/>
        </RelativeLayout>
        <Button
            android:layout_width="230dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_height="55dp"
            android:text="@string/btnLinkEmail"
            android:id="@+id/btnSignup"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/custom_btn_login_gradient"/>
        <LinearLayout
            android:layout_width="185dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:background="@color/bgSignupEmail"
            android:layout_height="44dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_help_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:text="@string/txtLinkEmail" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>